modified:   styles.css     fixed the issue in the the help modal where the numbers were not aligned properly

--- a/styles.css
+++ b/styles.css
@@ -297,10 +297,9 @@ legend {
 }
 
 #helpModal li {
-  margin-left: 1rem;
-  list-style: decimal;
-  margin-bottom: 0.5rem;
+  overflow: visible;
 }
+
 #closeHelp {
   display: block;
   width: 5rem;
